Fixed return to top links on FAQ; improved spacing in list within FAQ; Improved banner resizing on different widths

--- a/_scss/_banner_dev_1.scss
+++ b/_scss/_banner_dev_1.scss
@@ -48,24 +48,28 @@ div.banner {
   background-size: auto 350%;
 
   .logo img {
+    float: left;
     height: $banner-size;
     display: inline-block;
     vertical-align: middle;
-    margin:0 0 0 0;
-    padding:10px;
+    padding:10 10 10 20px;
   }
   h1 {
     /* NOTE: attempting to cascade over from layout;
     font-size: $xl-font-size;*/
     margin: 0;
+    position: relative;
     display: inline-block;
-    padding: 0px 0 10px 20px;
-    height: $banner-size;
+    padding: 20px 0 20px 20px;
   }
 }
 .navbar-header {
   text-align: center;
 }
+
+/*  
+  RESPONSIVENESS
+*/
 
 @media (max-width:1170px) {
   header.navbar {
@@ -88,8 +92,7 @@ div.banner {
   div.banner .logo img {
     width: 100px;
     vertical-align: middle;
-    margin-bottom: 20px;
-    padding: 0;}
+  }
   div.banner h1 {
     display: inline-block;
     width: 800px;
@@ -114,8 +117,8 @@ div.banner {
   div.banner .logo img {
     width: 100px;
     vertical-align: middle;
-    margin-bottom: 20px;
-    padding: 0;}
+  }
+
   div.banner h1 {
     display: inline-block;
     width: 800px;
@@ -137,41 +140,39 @@ div.banner {
 }
 
 
-@media (max-width:992px) {
+@media (max-width:991px) {
   div.banner .logo img {
     width: 100px;
     vertical-align: middle;
-    margin-bottom: 75px;
-    padding: 0;}
+  }
   div.banner h1 {
     display: inline-block;
-    width: 400px;
+    width: 600px;
     margin: 0;
   }
 }
 
-@media (max-width:768px) {
+@media (max-width:767px) {
   div.banner .logo img {
     width: 100px;
     vertical-align: middle;
-    margin-bottom: 75px;
-    padding: 0;
   }
   div.banner h1 {
     display: inline-block;
-    width: 400px;
+    padding: 15px 0 15px 20px;
+    width: 300px;
     margin: 0;
   }
 }
+
 @media (max-width:555px) {
   div.banner .logo img {
     width: 100px;
     vertical-align: middle;
-    margin: 0;
   }
   div.banner h1 {
     display: inline-block;
-    vertical-align: middle;
+    padding: 15px 0 15px 20px;
     width: 250px;
     margin: 0;
   }
@@ -181,11 +182,10 @@ div.banner {
   div.banner .logo img {
     width: 100px;
     vertical-align: middle;
-    margin: 0;
   }
   div.banner h1 {
     display: inline-block;
-    vertical-align: middle;
+    padding: 0px 0 0px 20px;
     width: 200px;
     margin: 0;
   }
@@ -195,6 +195,7 @@ div.banner {
 @media (max-width:365px) {
   div.banner .logo img {
     display: block;
+    float: none;
     margin-left: auto;
     margin-right: auto;
     width:100px;
