--- a/_scss/_layout_dev.scss
+++ b/_scss/_layout_dev.scss
@@ -51,7 +51,7 @@ html,body {
 }
 
 .wrapper {min-height:100%;
-  padding:135px 0 0 0;}
+  padding:145px 0 0 0;}
 
 body {
   font-family:  $base-font-family;
@@ -297,14 +297,16 @@ section.faq {
   li {
     font-family: 'Gill Sans Light', 'Gill Sans MT Light', Lato, Helvetica, Arial, sans-serif;
     font-weight:300;
-    margin-top:40px;
     padding: 0 40px 40px 40px;
     border-bottom:1px solid #ccc;
     a {margin-left:5px;}
   }
   li:last-child {border-bottom:0;}
+  ol {
+    margin-top:20px;
+  }
   ol>li {
-    padding:10px 0;
+    padding:0 0 10px 0 ;
     border-bottom-width:0;
   }
   .nav>.active {
@@ -319,7 +321,7 @@ section.faq {
     li {
       margin-top:0px;
       padding:0;
-      font-size:$md-font-size;
+      font-size:$base-font-size;
       line-height:1.25em;
     }
   }
@@ -327,7 +329,7 @@ section.faq {
     color: $h-titles-color;
     font-size:1.25em;
     display:block;
-    margin-bottom:15px;
+    margin:15px 0 15px 0;
     font-family:  'Gill Sans', 'Gill Sans MT', Lato, Helvetica, Arial, sans-serif;
     font-weight:normal;
   }
@@ -533,4 +535,11 @@ footer {
     .github img { width:40px; margin-right:20px;vertical-align:bottom}
 
   }
+}
+
+.container {
+    height:100%;
+}
+.row {
+    height:100%;
 }
